--- a/client/templates/agent/agent.html
+++ b/client/templates/agent/agent.html
@@ -73,22 +73,22 @@
                   Change Password</a>
             </li>
             <li>
-               <a href="javascript:;">
-                  <i class="icon-settings"></i>
+               <a href="#/agent/cashier">
+                  <i class="fa fa-users"></i>
                   Cashier Management</a>
             </li>
             <li>
-               <a href="javascrip:;">
+               <a href="#/agent/credit">
                   <i class="icon-settings"></i>
                   Credit Management</a>
             </li>
             <li>
-               <a href="javascrip:;">
+               <a href="#/agent/commission">
                   <i class="icon-settings"></i>
                   Commission</a>
             </li>
             <li>
-               <a href="javascrip:;">
+               <a href="#/agent/transaction">
                   <i class="icon-settings"></i>
                   Transaction History</a>
             </li>
