--- a/client/templates/admin/dashboard.html
+++ b/client/templates/admin/dashboard.html
@@ -4,7 +4,7 @@
          <div class="page-head">
             <!-- BEGIN PAGE TITLE -->
             <div class="page-title">
-               <h1>Dashboard <small>statistics & reports</small></h1>
+               <h1>Welcome to Admin Panel Dashboard <small>statistics & reports</small></h1>
             </div>
             <!-- END PAGE TITLE -->
          </div>
@@ -21,11 +21,12 @@
          <!-- END PAGE BREADCRUMB -->
          <!-- BEGIN PAGE CONTENT INNER -->
          <div class="row margin-top-10">
-            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+
+             <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
                <div class="dashboard-stat2">
                   <div class="display">
                      <div class="number">
-                        <h3 class="font-green-sharp">10</h3>
+                        <h3 class="font-green-sharp">85</h3>
                         <small>TOTAL USERS</small>
                      </div>
                      <div class="icon">
@@ -34,32 +35,35 @@
                   </div>
                </div>
             </div>
-            <!--<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">-->
-               <!--<div class="dashboard-stat2">-->
-                  <!--<div class="display">-->
-                     <!--<div class="number">-->
-                        <!--<h3 class="font-green-sharp">32</h3>-->
-                        <!--<small>ROUND ONE QUESTIONS</small>-->
-                     <!--</div>-->
-                     <!--<div class="icon">-->
-                        <!--<i class="icon-pencil"></i>-->
-                     <!--</div>-->
-                  <!--</div>-->
-               <!--</div>-->
-            <!--</div>-->
-            <!--<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">-->
-               <!--<div class="dashboard-stat2">-->
-                  <!--<div class="display">-->
-                     <!--<div class="number">-->
-                        <!--<h3 class="font-green-sharp">53</h3>-->
-                        <!--<small>ROUND TWO QUESTIONS</small>-->
-                     <!--</div>-->
-                     <!--<div class="icon">-->
-                        <!--<i class="icon-pencil"></i>-->
-                     <!--</div>-->
-                  <!--</div>-->
-               <!--</div>-->
-            <!--</div>-->
+
+             <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+               <div class="dashboard-stat2">
+                  <div class="display">
+                     <div class="number">
+                        <h3 class="font-green-sharp">32</h3>
+                        <small>TOTAL AGENTS</small>
+                     </div>
+                     <div class="icon">
+                         <i class="icon-user"></i>
+                     </div>
+                  </div>
+               </div>
+            </div>
+
+             <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+               <div class="dashboard-stat2">
+                  <div class="display">
+                     <div class="number">
+                        <h3 class="font-green-sharp">53</h3>
+                        <small>TOTAL CASHIERS</small>
+                     </div>
+                     <div class="icon">
+                         <i class="icon-user"></i>
+                     </div>
+                  </div>
+               </div>
+            </div>
+
          </div>
          <!-- END PAGE CONTENT INNER -->
    <!--    </div>
