--- a/client/templates/agent/dashboard.html
+++ b/client/templates/agent/dashboard.html
@@ -4,7 +4,7 @@
          <div class="page-head">
             <!-- BEGIN PAGE TITLE -->
             <div class="page-title">
-               <h1>Dashboard <small>statistics & reports</small></h1>
+               <h1>Welcome to Agent Panel Dashboard <small>statistics & reports</small></h1>
             </div>
             <!-- END PAGE TITLE -->
          </div>
