--- a/client/templates/admin/dashboard.html
+++ b/client/templates/admin/dashboard.html
@@ -64,6 +64,120 @@
                </div>
             </div>
 
+            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+                 <div class="dashboard-stat2">
+                     <div class="display">
+                         <div class="number">
+                             <h3 class="font-green-sharp">63</h3>
+                             <small>TOTAL GAME</small>
+                         </div>
+                         <div class="icon">
+                             <i class="icon-user"></i>
+                         </div>
+                     </div>
+                 </div>
+             </div>
+
+             <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+                 <div class="dashboard-stat2">
+                     <div class="display">
+                         <div class="number">
+                             <h3 class="font-green-sharp">84</h3>
+                             <small>TOTAL SALES</small>
+                         </div>
+                         <div class="icon">
+                             <i class="icon-user"></i>
+                         </div>
+                     </div>
+                 </div>
+             </div>
+
+
+             <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+                 <div class="dashboard-stat2">
+                     <div class="display">
+                         <div class="number">
+                             <h3 class="font-green-sharp">2900</h3>
+                             <small>TOTAL PROFIT</small>
+                         </div>
+                         <div class="icon">
+                             <i class="icon-user"></i>
+                         </div>
+                     </div>
+                 </div>
+             </div>
+
+             <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+                 <div class="dashboard-stat2">
+                     <div class="display">
+                         <div class="number">
+                             <h3 class="font-green-sharp">20%</h3>
+                             <small>TOTAL PERCENTAGE</small>
+                         </div>
+                         <div class="icon">
+                             <i class="icon-user"></i>
+                         </div>
+                     </div>
+                 </div>
+             </div>
+
+             <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+                 <div class="dashboard-stat2">
+                     <div class="display">
+                         <div class="number">
+                             <h3 class="font-green-sharp">15%</h3>
+                             <small>TOTAL COMMISION</small>
+                         </div>
+                         <div class="icon">
+                             <i class="icon-user"></i>
+                         </div>
+                     </div>
+                 </div>
+             </div>
+
+             <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+                 <div class="dashboard-stat2">
+                     <div class="display">
+                         <div class="number">
+                             <h3 class="font-green-sharp">150</h3>
+                             <small>UNPAID COMMISION</small>
+                         </div>
+                         <div class="icon">
+                             <i class="icon-user"></i>
+                         </div>
+                     </div>
+                 </div>
+             </div>
+
+             <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+                 <div class="dashboard-stat2">
+                     <div class="display">
+                         <div class="number">
+                             <h3 class="font-green-sharp">1500</h3>
+                             <small>MONTHLY PROFIT</small>
+                         </div>
+                         <div class="icon">
+                             <i class="icon-user"></i>
+                         </div>
+                     </div>
+                 </div>
+             </div>
+
+             <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+                 <div class="dashboard-stat2">
+                     <div class="display">
+                         <div class="number">
+                             <h3 class="font-green-sharp">15</h3>
+                             <small>ACTIVE CASHIER</small>
+                         </div>
+                         <div class="icon">
+                             <i class="icon-user"></i>
+                         </div>
+                     </div>
+                 </div>
+             </div>
+
+
          </div>
          <!-- END PAGE CONTENT INNER -->
    <!--    </div>
