--- a/client/templates/admin/form_agent.html
+++ b/client/templates/admin/form_agent.html
@@ -49,6 +49,19 @@
                                     </div>
                                 </div>
                             </div>
+
+                            <div class="form-group">
+                                <label class="control-label col-md-3" for="vEmail">Mobile Number <span class="text-danger">*</span></label>
+                                <div class="col-md-4">
+                                    <input type="number" value="" class="form-control" name="iMobile" id="iMobile"  required ng-model="user.iMobile" ng-minlength="8" ng-maxlength="15">
+                                    <div ng-messages="form_cpass.nPassword.$error && form_cpass.nPassword.$dirty" ng-show="form_user.iMobile.$error && form_user.iMobile.$dirty" role="alert" class="text-danger">
+                                        <div ng-message="required" ng-show="form_user.iMobile.$dirty && form_user.iMobile.$error.required">Mobile number is required.</div>
+                                        <div ng-show="form_user.iMobile.$dirty && form_user.iMobile.$error.minlength">Enter valid mobile.</div>
+                                        <div ng-show="form_user.iMobile.$dirty && form_user.iMobile.$error.maxlength">Enter valid mobile.</div>
+                                    </div>
+                                </div>
+                            </div>
+
                         </div>
                         <div class="form-actions">
                             <div class="row">
